--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  color: #222;
+  background-color: rgb(131, 226, 199);
 }
 ul {
   padding: 0;
@@ -18,10 +20,9 @@ header, footer{
 }
 
 h1 {
-  margin: 15px 0 0 20px;
+  margin: 15px 20px 0 20px;
   font-size: 20px;
   font-style: italic;
-  color:midnightblue;
   text-shadow: 2px 2px 0 #FFF, -2px -2px 0 #FFF,
   -2px 2px 0 #FFF, 2px -2px 0 #FFF,
   0px 2px 0 #FFF,  0-2px 0 #FFF,
@@ -30,18 +31,24 @@ h1 {
 }
 
 nav {
-  margin:0;
   float: right;
   height: 45px;
 }
 
 nav li {
-  background-color: cadetblue;
   list-style-type: none;
   text-align: center;
   float: left;
+}
+
+nav a{
+  background-color: cadetblue;
   border-right: 2px solid #777;
   padding: 0 15px;
+  margin: 0;
+  color: rgb(62, 62, 62);
+  text-decoration: none;
+  display: block;
 }
 
 nav li:hover {
@@ -54,11 +61,12 @@ main {
   position: relative;
   height: 650px;
   display: flex;
+  background-color: #FFF;
 }
 
 .main-theam {
   width: 70%;
-  background-image: url(../img/23018745.png);
+  background-image: url(img/23018745.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -83,12 +91,10 @@ main {
 .point {
   width: 30%;
   background-color:  rgb(131, 226, 199);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-
-.point-title {
-  margin-top: 15px
-}
-
 .point li {
   text-align: center;
   list-style-type: none;
@@ -97,16 +103,58 @@ main {
   margin: 5px;
 }
 
-h4 {
-  color:rgb(10, 87, 39);
+.document-request {
+  position: relative;
+
+}
+
+.document-request p {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border: 7px double rgb(117, 38, 235);
+  background-image: linear-gradient(to bottom, rgb(234, 244, 169), rgb(148, 203, 109));
+}
+
+.document-request a {
+  display: block;
+  line-height:6em;
   text-align: center;
-  height: 45px;
-  width: 80%;
-  border: 7px double rgb(48, 1, 236);
-  background-image: linear-gradient(to bottom, rgb(225, 242, 113), rgb(148, 203, 109));
+  color:rgb(117, 38, 235);
+}
+
+.document-request p:hover {
+  background-image: linear-gradient(to bottom,  rgb(148, 203, 109), rgb(234, 244, 169));
 }
 
 footer p{
   text-align: center;
 
+}
+
+@media(max-width: 710px) {
+
+  nav {
+     float: left;
+  }
+  
+  ul {
+    margin: 0;
+  }
+
+  nav a {
+    padding: 0 6px;
+  }
+  main {
+    clear: both;
+    height: fit-content;
+  }
+  .logo {
+    width: 60%;
+
+  }
+  .main-message {
+    font-size: 70%;
+    margin: 0;
+  }
 }
