--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header, footer{
   background-color: rgb(131, 226, 199);
   background-attachment: fixed;
   margin: 0;
+  display: flex;
 }
 
 h1 {
@@ -31,20 +32,19 @@ h1 {
 }
 
 nav {
-  float: right;
   height: 45px;
 }
 
 nav li {
   list-style-type: none;
   text-align: center;
-  float: left;
+  float:left;
 }
 
 nav a{
   background-color: cadetblue;
   border-right: 2px solid #777;
-  padding: 0 15px;
+  padding: 0 12px;
   margin: 0;
   color: rgb(62, 62, 62);
   text-decoration: none;
@@ -59,7 +59,6 @@ nav li:hover {
 main {
   margin: 0 auto;
   position: relative;
-  height: 650px;
   display: flex;
   background-color: #FFF;
 }
@@ -86,44 +85,74 @@ main {
   top: 74%;
   left: 3%;
 }
+ section {
+  height: 800px;
+ }
 
 
 .point {
-  width: 30%;
+  width: 35%;
   background-color:  rgb(131, 226, 199);
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
+}
+
+.point ul {
+  margin: 0;
 }
 .point li {
+  display: block;
+  position: relative;
   text-align: center;
   list-style-type: none;
-  width: 95%;
-  height: 90px;
+  max-height: 100%;
   margin: 5px;
+  background-size: 100%;
+  background-position: top;
+  background-repeat: no-repeat;
+  font-size: 1.2vw;
+}
+
+.point p {
+  position: absolute;
+  top:11%;
+  left:15%;
+}
+.point1,.point3 {
+  background-image: url(img/fukidasi-g.png);
+  background-size: cover;
+  padding:8px 3px 10px 2px;
+} 
+
+.point2,.point4 {
+  background-image: url(img/fukidasi-p.png);
+  padding: 10px 3px 10px 4px;
+} 
+
+
+span {
+  font-weight: bold;
 }
 
 .document-request {
-  position: relative;
-
-}
-
-.document-request p {
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  border: 7px double rgb(117, 38, 235);
-  background-image: linear-gradient(to bottom, rgb(234, 244, 169), rgb(148, 203, 109));
+  display: flex;
+  justify-content: space-around;
 }
 
 .document-request a {
+  border-radius: 50%;
+  width: 110px;
+  height: 110px;
+  border: 7px double rgb(117, 38, 235);
+  background-image: linear-gradient(to bottom, rgb(234, 244, 169), rgb(148, 203, 109));
   display: block;
   line-height:6em;
   text-align: center;
   color:rgb(117, 38, 235);
 }
 
-.document-request p:hover {
+
+.document-request a:hover {
   background-image: linear-gradient(to bottom,  rgb(148, 203, 109), rgb(234, 244, 169));
 }
 
@@ -132,10 +161,22 @@ footer p{
 
 }
 
+@media(max-width: 1100px) {
+  .point img {
+    width:100%;
+  }
+  .point p {
+    left: 10%;
+    text-align: left;
+  }
+ 
+}
+
+
 @media(max-width: 710px) {
 
   nav {
-     float: left;
+     font-size: 13px;
   }
   
   ul {
